--- a/malicious_url_detecting.ipynb
+++ b/malicious_url_detecting.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyN0ewmguJBBZmU4CSZ0W9t/",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,8 +17,18 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/GunaseelanC/cyber_security/blob/main/malicious_url_detecting.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "f4fn6t3W2fJS"
       },
@@ -41,7 +53,7 @@
       "metadata": {
         "id": "xC3APFkU3BCa"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -64,7 +76,7 @@
         "id": "7fOvVv073K7V",
         "outputId": "e33b8c78-09bb-4bbc-8a4e-36a0f08bc77c"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -364,7 +376,7 @@
         "id": "IhvhGBIg3Mqr",
         "outputId": "ff62ac3b-832d-4d39-8dfb-c8d5321ce90f"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -566,7 +578,7 @@
       "metadata": {
         "id": "_UAtGXyD3z96"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -578,7 +590,7 @@
       "metadata": {
         "id": "wiiUojDr4WeJ"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -590,7 +602,7 @@
       "metadata": {
         "id": "gPIY7JAJ5BYv"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -605,7 +617,7 @@
       "metadata": {
         "id": "ovsn5yRk5Jzt"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -621,7 +633,7 @@
         "id": "AFysmMfu5OYu",
         "outputId": "2a967fd2-4eb2-417c-a17b-e382e7c51b99"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -641,7 +653,7 @@
       "metadata": {
         "id": "qoYWv2KN6ETM"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -660,7 +672,7 @@
         "id": "eqXGCKag6Nqq",
         "outputId": "45c7b6ab-8fb0-4132-8a83-f0c7159de2ab"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -704,7 +716,7 @@
         "id": "85VLHEgO6Qwk",
         "outputId": "2fb8861a-3407-4a0b-ccad-8d077666eac2"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -728,7 +740,7 @@
       "metadata": {
         "id": "fhi-6NFg6aCc"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -740,7 +752,7 @@
       "metadata": {
         "id": "mBIS1j1d6mSq"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -755,7 +767,7 @@
         "id": "Itxew1hJ6pQR",
         "outputId": "d7db6032-4881-44dd-838e-e026c4adc8b6"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -778,7 +790,7 @@
       "metadata": {
         "id": "QSyOx9g66r2E"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -795,7 +807,7 @@
         "id": "2dlgn3RQ6vkt",
         "outputId": "925722a4-683f-4eff-8540-68f66c5079da"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -815,7 +827,7 @@
       "metadata": {
         "id": "J-eS8DJ06zay"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -827,7 +839,7 @@
       "metadata": {
         "id": "rAMZcAzu64Nb"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -846,7 +858,7 @@
         "id": "SwW-MKyP67u9",
         "outputId": "33aaeddc-d59e-4250-d775-d2da48d62483"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -890,7 +902,7 @@
         "id": "O0ZUP5fG6_IZ",
         "outputId": "8dfe0102-7a31-45d1-b89e-7e152a491b90"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
